--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "codemirror": "^5.20.2",
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
+    "phoenix_html": "file:deps/phoenix_html",
+    "sweetalert2": "^6.1.1"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
