--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "brunch build --production",
-    "watch": "brunch watch --stdin"
+    "watch": "webpack --watch-stdin --progress --color"
   },
   "dependencies": {
     "codemirror": "^5.20.2",
@@ -13,10 +12,21 @@
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "bootstrap-sass": "^3.3.7",
     "brunch": "2.7.4",
     "clean-css-brunch": "~2.0.0",
+    "copy-webpack-plugin": "^4.0.1",
     "css-brunch": "~2.0.0",
+    "css-loader": "^0.26.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "javascript-brunch": "~2.0.0",
-    "uglify-js-brunch": "~2.0.1"
+    "node-sass": "^3.13.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "uglify-js-brunch": "~2.0.1",
+    "webpack": "^1.13.3"
   }
 }
