--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "codemirror": "^5.20.2",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
-    "sweetalert2": "^6.1.1"
+    "semantic-ui": "^2.2.6",
+    "svg-url-loader": "^1.1.0",
+    "sweetalert2": "^6.1.1",
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "babel-brunch": "~6.0.0",
