--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "codemirror": "^5.20.2",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "semantic-ui": "^2.2.6",
     "svg-url-loader": "^1.1.0",
     "sweetalert2": "^6.1.1",
