--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "watch": "webpack --watch-stdin --progress --color"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "codemirror": "^5.20.2",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
     "semantic-ui": "^2.2.6",
+    "semantic-ui-react": "^0.63.1",
     "svg-url-loader": "^1.1.0",
     "sweetalert2": "^6.1.1",
     "url-loader": "^0.5.7"
@@ -20,6 +23,8 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "bootstrap-sass": "^3.3.7",
     "brunch": "2.7.4",
     "clean-css-brunch": "~2.0.0",
