--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.1",
+    "react-codemirror": "^0.3.0",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
     "semantic-ui": "^2.2.6",
