--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-codemirror": "^0.3.0",
     "react-dom": "^15.4.1",
     "react-router": "^3.0.0",
+    "react-semantic-modal": "^1.0.6",
     "semantic-ui": "^2.2.6",
     "semantic-ui-react": "^0.63.1",
     "svg-url-loader": "^1.1.0",
